//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  room Room [not null]
  roomId String [not null]
  turnUserRoom Room
  topUserAuction Auction
  buyerUserAuction Auction
  targetUserTrade Trade
  confirmedUserTrade Trade
  userTradeBets TradeBet [not null]
  userCards UserCard [not null]
}

Table Room {
  id String [pk]
  turnUser User
  turnUserId String [unique]
  auction Auction
  auctionId String [unique]
  trade Trade
  tradeId String [unique]
  updatedAt DateTime [not null]
  userOrder String[] [not null]
  users User [not null]
}

Table Auction {
  id String [pk]
  topUser User
  topUserId String [unique]
  buyerUser User
  buyerUserId String [unique]
  animalCard Card [not null]
  animalCardId Int [not null]
  amount Int [not null, default: 0]
  room Room
}

Table Trade {
  id String [pk]
  confirmedUser User
  confirmedUserId String [unique]
  targetUser User [not null]
  targetUserId String [unique, not null]
  targetUserAnimalUserCardIds Int[] [not null]
  turnUserAnimalUserCardIds Int[] [not null]
  room Room
  tradeBet TradeBet [not null]
}

Table TradeBet {
  id Int [pk, increment]
  trade Trade [not null]
  tradeId String [not null]
  user User [not null]
  userId String [not null]
  moneyUserCard UserCard [not null]
  moneyUserCardId Int [not null]
}

Table Card {
  id Int [pk, increment]
  type CardType [not null]
  name String [not null]
  img String [not null]
  point Int [not null]
  auctions Auction [not null]
  userCards UserCard [not null]
}

Table UserCard {
  id Int [pk, increment]
  user User [not null]
  userId String [not null]
  card Card [not null]
  cardId Int [not null]
  TradeBet TradeBet [not null]
}

Enum CardType {
  ANIMAL
  MONEY
}

Ref: User.roomId - Room.id

Ref: Room.turnUserId - User.id

Ref: Room.auctionId - Auction.id

Ref: Room.tradeId - Trade.id

Ref: Auction.topUserId - User.id

Ref: Auction.buyerUserId - User.id

Ref: Auction.animalCardId > Card.id

Ref: Trade.confirmedUserId - User.id

Ref: Trade.targetUserId - User.id

Ref: TradeBet.tradeId > Trade.id

Ref: TradeBet.userId > User.id

Ref: TradeBet.moneyUserCardId > UserCard.id

Ref: UserCard.userId > User.id

Ref: UserCard.cardId > Card.id